--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -35,8 +35,8 @@
     .banner{
         .banner__img{
             height:110px;
-            width : 335px;
             border-radius: 10px;
+            width : 100%;
         }
         .banner__text{
             height: auto;
