--- a/src/components/Slider/slider.scss
+++ b/src/components/Slider/slider.scss
@@ -47,10 +47,10 @@
 
 @media screen and (max-width : 1240px) {
     .display{
-        width : 335px;
+        width : 100%;
         height : 225px;
         .display__img img{
-            width : 335px;
+            width : 100%;
             height : 225px;
         }
         .display__rightarrow img, .display__leftarrow img{
