--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -3,6 +3,9 @@
     justify-content: center;
     flex-direction: column;
     width : 100%;
+    .home__banner{
+        margin : 0px 20px;
+    }
 }
 
 .banner__img{
